[package]
name = "honey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra-glm = "0.18.0"
png = "0.17.7"
pretty_env_logger = "0.4.0"
thiserror = "1.0.38"
tobj = { version = "3.2.4", features = ["log"] }
vulkanalia = { version = "=0.17.0", features = ["libloading", "window"] }
winit = "0.27.0"